--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
       padding-top:30px;
     }
     .row1{
-      background-color: orange;
+      background-color: #f15429;
       height: 100px
 
     }
